# learning_gRPC

./: .dockerignore  .env  Dockerfile  docker-compose.yml  init_data_base.js  main.py  pyproject.toml
proto/: __init__.py
proto/catalog_service/: catalog.proto
src/application/: __init__.py
src/application/dtos/: __init__.py  producut.py  review.py
src/application/use_cases/: auth_service.py  catalog_service.py
src/config/: __init__.py
src/config/config/: config.py
src/config/database/: __init__.py  db_helper.py
src/config/database/repositories/: iaproduct_repositories.py  product_repositories.py
src/core/gRPC/: catalog_server.py  server.py
src/core/gRPC/client/: grpc_client.py
src/core/gRPC/server/: grpc_server.py
src/interfaces/api/catalog/: routers.py
src/utils/: __init__.py  convert.py  time.py
