[tool.poetry]
name = "learnig-grpc"
version = "0.1.0"
description = "learning grpc with fast_api"
authors = ["ivankorolev <Ivankorol1512@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
asyncio = ">=4.0.0,<5.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
pydantic = {extras = ["email"], version = ">=2.12.5,<3.0.0"}
pymongo = ">=4.16.0,<5.0.0"
motor = ">=3.7.1,<4.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
grpcio = ">=1.76.3,<2.0.0"
grpcio-tools = ">=1.76.3,<2.0.0"
protobuf = "^6.33.5"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
